--- a/views/layout.erb
+++ b/views/layout.erb
@@ -6,6 +6,13 @@
     <title>STOCKBOX</title>
   </head>
   <body>
-
-  </body>s
+    <nav>
+      <ul>
+        <li><a href='/'>Home</a></li>
+        <li><a href='/stock'>View Stock</a></li>
+        <li><a href='/manufacturers'>View Manufacturers</a></li>
+      </ul>
+    </nav>
+    <% yield %>
+  </body>
 </html>
