--- a/views/layout.erb
+++ b/views/layout.erb
@@ -13,6 +13,6 @@
         <li><a href='/manufacturers'>View Manufacturers</a></li>
       </ul>
     </nav>
-    <% yield %>
+    <%=yield %>
   </body>
 </html>
