--- a/views/layout.erb
+++ b/views/layout.erb
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <link rel='stylesheet' href='../public/style' type='text/css'>
+    <link rel='stylesheet' href='/style.css' type='text/css'>
     <title>STOCKBOX</title>
   </head>
   <body>
