--- a/views/stock.erb
+++ b/views/stock.erb
@@ -11,6 +11,7 @@
     <th>UNIT COST</th>
     <th>SELL PRICE</th>
     <th>VIEW ITEM</th>
+    <th>DELETE ITEM</th>
   </tr>
   <% for stock in @stock%>
   <tr>
@@ -20,10 +21,16 @@
     <td><%=stock.quantity%></td>
     <td><%=stock.unit_cost%></td>
     <td><%=stock.sell_price%></td>
-      <td><a href='/stock/<%=stock.id%>'>View Item Detail</td>
+    <td><a href='/stock/<%=stock.id%>'>View Item Detail</td>
+      <form method='post' action='stock/<%=stock.id%>/deleted'>
+        <td><input type='submit' value='DELETE ITEM'</td>
+      </form>
 
   </tr>
   <% end %>
 
 
 </table>
+
+<h1><a href='/stock/addstock'>ADD STOCK</a></h1>
+  
