--- a/views/view_item.erb
+++ b/views/view_item.erb
@@ -3,6 +3,7 @@
 <p>Manufacturer:<%=@stock.manufacturer_id%></p>
 <p>Type:<%=@stock.type%></p>
 <p>Stock-on-hand:<%=@stock.quantity%></p>
+<p>Basic Stock Level:<%=@stock.bsl%></p>
 </section>
 
 <img src="<%=@stock.url%>">
