form to add new stock added but not working yet

--- a/views/addstock.erb
+++ b/views/addstock.erb
@@ -2,6 +2,31 @@
   <form method='post' action='/stock/addstock'>
     <label for='item'>Item Name</label>
     <input id='item' type='text' name='name'>
+    <br>
     <label for='manufacturer id'>Manufacturer</label>
+    <input id='manufacturer' type='text' name='manufacturer'>
+    <br>
+    <label for='type'>Item Type</label>
+    <input id='type' type='text' name='type'>
+    <br>
+    <label for='bsl'>Basic Stock Level</label>
+    <input id='bsl' type='number' name='bsl' min='0'>
+    <br>
+    <label for='quantity'>Quantity</label>
+    <input id='quantity' type='number' name='quantity' min='0'>
+    <br>
+    <label for='unit cost'>Unit Cost</label>
+    <input id='unit cost' type='number' name='unit_cost' min ='0'>
+    <br>
+    <label for='sell price'>Sell Price</label>
+    <input id='sell price' type='number' name='sell_price' min='0'>
+    <br>
+    <label for='description'>Description</label>
+    <input id='description' type='text' name='description'>
+    <br>
+    <label for='url'>URL for Image</label>
+    <input id='url' type='text' name='url'>
+    <br>
+    <input type='submit' value ='Submit New Item'
 
   </form>
