add colour based metric to stock check

--- a/views/addstock.erb
+++ b/views/addstock.erb
@@ -1,5 +1,5 @@
 <h1>ADD NEW STOCK ITEM BELOW<h1>
-  <form method='post' action='/stock/addstock'>
+  <form method='post' action='./stock/addstock'>
     <label for='item'>Item Name</label>
     <input id='item' type='text' name='name'>
     <br>
