--- a/public/style.css
+++ b/public/style.css
@@ -9,10 +9,6 @@ li{
 nav{
   background-color: steelblue;
 }
-h3{
-  border:3pt solid black;
-  overflow: scroll;
-}
 
 .details{
   background-color: red;
@@ -21,4 +17,18 @@ h3{
 table{
   border: 1pt,solid black;
   overflow: scroll;
+}
+
+th{
+  width:150px;
+  height:50px;
+  background-color:black;
+  color:white;
+}
+
+td{
+  width:150px;
+  text-align: center;
+  border: 1px solid black;
+  background-color: lightcyan;
 }
