fixed delete feature

--- a/views/manufacturers.erb
+++ b/views/manufacturers.erb
@@ -11,7 +11,7 @@
     <td><%=manufacturer.name%></td>
     <td><%=manufacturer.active%></td>
     <td><a href='/manufacturer/<%=manufacturer.id%>/update'>Update</a></td>
-    <td><form method='post' action='manufacturers/<%=manufacturer.id%>/delete'>
+    <td><form method='post' action='/manufacturer/<%=manufacturer.id%>/delete'>
       <input type="submit" value='DELETE MANUFACTURER'>
         </form>
     </td>
