fixed manufacturer edit (thank you Emma)

--- a/views/manufacturerupdate.erb
+++ b/views/manufacturerupdate.erb
@@ -14,7 +14,7 @@
 
 <form method='post' action='/manufacturer/<%=@manufacturer.id%>/update'>
   <label for='name'>Name of Manufacturer</label>
-  <input id='name' type='text' name='<%=@manufacturer.name%>' value='<%=@manufacturer.name%>'>
+  <input id='name' type='text' name='name' value='<%=@manufacturer.name%>'>
   <br>
   <label for='active'>Active/Inactive</label>
   <select id='active' name='active'>
