complete project- no revisions

--- a/views/addmanufacturer.erb
+++ b/views/addmanufacturer.erb
@@ -1,1 +1,14 @@
-<h1>Placeholder Statment</h1>
+<h1>Add New Manufacturer</h1>
+<form method='post' action='/addmanufacturer'>
+  <label for='name'>Manufacturer Name</label>
+  <input id='name' type='text' name='name'>
+  <br>
+  <label for='active'>Active/Inactive</label>
+  <select id='active' name='active'>
+    <option value='true'>Active</option>
+    <option value='false'>Inactive</option>
+  </select>
+  <br>
+  <input type='submit' value='Add Manufacturer'>
+
+</form>
