--- a/public/style.css
+++ b/public/style.css
@@ -32,3 +32,9 @@ td{
   border: 1px solid black;
   background-color: lightcyan;
 }
+
+#itempage{
+  width:300px;
+  height:300px;
+  border: 4pt solid black;
+  display:inline block;
